# darkstar

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  .luacheckrc  .travis.yml  .travis.yml.bak  127.0.0.154230  AutoCrashDump.reg  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTOR_AGREEMENT.md  ConnectionServer.cmd  DSConnect-server - Shortcut.lnk  DSConnect-server.ilk  DSGame-server - Shortcut.lnk  DSGame-server.exe - Shortcut.lnk  Dockerfile-dsbuild  Dockerfile-dsconnect  Dockerfile-dsdb  Dockerfile-dsgame  Dockerfile-dssearch  GIT_VER  GameServer.cmd  ISSUE_TEMPLATE.md  LICENSE  Makefile.am  Makefile.in  PULL_REQUEST_TEMPLATE.md  README.md  STYLE.md  SearchServer.cmd  Start All Servers.cmd  Start Servers.bat  TODO.txt  Update Nomad_Moogle.lua - Level 95  Zone.lua  (+24 more)
src/login/: CMakeLists.txt  Makefile.in  account.cpp  account.h  chat_server.cpp  chat_server.h  lobby.cpp  lobby.h  login.cpp  login.h  login_auth.cpp  login_auth.h  login_session.cpp  login_session.h  message_server.cpp  message_server.h
src/map/: CMakeLists.txt  Makefile.in  abilities.h  ability.cpp  ability.h  alliance.cpp  alliance.h  anticheat.cpp  anticheat.h  attack.cpp  attack.h  attackround.cpp  attackround.h  baseentity.cpp  baseentity.h  battleentity.cpp  battleentity.h  battlefield.cpp  battlefield.h  battlefield_handler.cpp  battlefield_handler.h  battleutils.cpp  battleutils.h  blue_spell.cpp  blue_spell.h  blue_trait.cpp  blue_trait.h  blueutils.cpp  blueutils.h  campaign_system.cpp  campaign_system.h  change_music.cpp  change_music.h  char_recast_container.cpp  char_recast_container.h  charentity.cpp  charentity.h  charutils.cpp  charutils.h  chat.cpp  (+124 more)
src/map/ai/: action.cpp  action.h  ai_automaton_dummy.cpp  ai_automaton_dummy.h  ai_base.cpp  ai_base.h  ai_battle.cpp  ai_battle.h  ai_char.cpp  ai_char.h  ai_char_charm.cpp  ai_char_charm.h  ai_char_gm.cpp  ai_char_gm.h  ai_char_normal.cpp  ai_char_normal.h  ai_char_prisoner.cpp  ai_char_prisoner.h  ai_common.h  ai_container.cpp  ai_container.h  ai_general.cpp  ai_general.h  ai_mob.cpp  ai_mob.h  ai_mob_dummy.cpp  ai_mob_dummy.h  ai_npc.cpp  ai_npc.h  ai_npc_dummy.cpp  ai_npc_dummy.h  ai_npc_patrol.cpp  ai_npc_patrol.h  ai_pet_dummy.cpp  ai_pet_dummy.h  ai_ultimate_summon.cpp  ai_ultimate_summon.h
src/map/ai/controllers/: ai_controller.cpp  ai_controller.h  automaton_controller.cpp  automaton_controller.h  controller.cpp  controller.h  fellow_controller.cpp  fellow_controller.h  mob_controller.cpp  mob_controller.h  pet_controller.cpp  pet_controller.h  player_charm_controller.cpp  player_charm_controller.h  player_controller.cpp  player_controller.h  trust_controller.cpp  trust_controller.h
src/map/ai/helpers/: action_queue.cpp  action_queue.h  event_handler.cpp  event_handler.h  pathfind.cpp  pathfind.h  targetfind.cpp  targetfind.h
src/map/ai/states/: ability_state.cpp  ability_state.h  attack_state.cpp  attack_state.h  death_state.cpp  death_state.h  despawn_state.cpp  despawn_state.h  inactive_state.cpp  inactive_state.h  item_state.cpp  item_state.h  magic_state.cpp  state.cpp  (+20 more)
src/map/entities/: automatonentity.cpp  automatonentity.h  baseentity.cpp  baseentity.h  battleentity.cpp  battleentity.h  charentity.cpp  charentity.h  fellowentity.cpp  fellowentity.h  mobentity.cpp  mobentity.h  npcentity.cpp  npcentity.h  petentity.cpp  petentity.h  trustentity.cpp  trustentity.h
src/map/items/: item.cpp  item.h  item_armor.cpp  item_armor.h  item_currency.cpp  item_currency.h  item_equipment.cpp  item_equipment.h  item_fish.cpp  item_fish.h  item_furnishing.cpp  item_furnishing.h  item_general.cpp  item_general.h  item_guild.cpp  item_guild.h  item_linkshell.cpp  item_linkshell.h  item_puppet.cpp  item_puppet.h  item_shop.cpp  item_shop.h  item_usable.cpp  item_usable.h  item_weapon.cpp  item_weapon.h
src/map/lua/: lua_ability.cpp  lua_ability.h  lua_action.cpp  lua_action.h  lua_baseentity.cpp  lua_baseentity.h  lua_battlefield.cpp  lua_battlefield.h  lua_instance.cpp  lua_instance.h  lua_item.cpp  lua_item.h  lua_latent_effect.cpp  lua_latent_effect.h  lua_mobskill.cpp  lua_mobskill.h  lua_region.cpp  lua_region.h  lua_spell.cpp  lua_spell.h  lua_statuseffect.cpp  lua_statuseffect.h  lua_trade_container.cpp  lua_trade_container.h  lua_trustskill.cpp  lua_trustskill.h  lua_zone.cpp  lua_zone.h  luautils.cpp  luautils.h
src/map/marshal/: string.hpp
src/map/packets/: action.cpp  action.h  auction_house.cpp  auction_house.h  automaton_update.cpp  automaton_update.h  basic.cpp  basic.h  bazaar_check.cpp  bazaar_check.h  bazaar_close.cpp  bazaar_close.h  bazaar_confirmation.cpp  bazaar_confirmation.h  bazaar_item.cpp  bazaar_item.h  bazaar_message.cpp  bazaar_message.h  bazaar_purchase.cpp  bazaar_purchase.h  blacklist.cpp  blacklist.h  blue_set_spells.cpp  blue_set_spells.h  campaign_map.cpp  campaign_map.h  campaing_map.cpp  campaing_map.h  caught_fish.cpp  caught_fish.h  caught_monster.cpp  caught_monster.h  change_music.cpp  change_music.h  char.cpp  char.h  char_abilities.cpp  char_abilities.h  char_appearance.cpp  char_appearance.h  (+206 more)
src/map/utils/: attackutils.cpp  attackutils.h  battlefieldutils.cpp  battlefieldutils.h  battleutils.cpp  battleutils.h  blacklistutils.cpp  blacklistutils.h  blueutils.cpp  blueutils.h  charutils.cpp  charutils.h  diggingutils.cpp  diggingutils.h  fishingutils.cpp  fishingutils.h  guildutils.cpp  guildutils.h  instanceutils.cpp  instanceutils.h  itemutils.cpp  itemutils.h  jailutils.cpp  jailutils.h  mobutils.cpp  mobutils.h  petutils.cpp  petutils.h  puppetutils.cpp  puppetutils.h  synthutils.cpp  synthutils.h  trustutils.cpp  trustutils.h  zoneutils.cpp  zoneutils.h
src/search/: CMakeLists.txt  auction_house.cpp  auction_house.h  data_loader.cpp  data_loader.h  search.cpp  search.h  tcp_request.cpp  tcp_request.h
src/search/packets/: ah_items_list.cpp  ah_items_list.h  auction_history.cpp  auction_history.h  auction_list.cpp  auction_list.h  linkshell_list.cpp  linkshell_list.h  party_list.cpp  party_list.h  search_list.cpp  search_list.h
(+18706 files in other folders)
